# refactoring-master

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: common.hpp  histogram.hpp  log.hpp  observer.hpp  pageContainer.hpp  statSender.hpp  structs.hpp  usedMemory.hpp
sources/: histogram.cpp  log.cpp  pageContainer.cpp  source.cpp  statSender.cpp  usedMemory.cpp
tests/: statSenderTest.hpp  test.cpp
